# phastaIO-converter

./: .gitmodules  CMakeLists.txt  README
syncio-tester/: CMakeLists.txt  phastaiotest.cpp
